--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^6.0.1",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-number-format": "^5.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
