--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-number-format": "^5.4.1"
   },
   "devDependencies": {
